// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MainWrapper renders correctly with props 1`] = `
<div>
  <main
    css="[object Object]"
  >
    <h1>
      Hello there!
    </h1>
  </main>
</div>
`;

exports[`MainWrapper renders correctly without props 1`] = `
<div>
  <main
    css="[object Object]"
  />
</div>
`;
